# C-Compression-Library

./: BinaryStdIn.h  BinaryStdOut.h  CMakeLists.txt  DCT.h  HuffmanEncoding.h  RunLengthEncoding.h  TST.h  main.cpp
